[package]
name = "github-backup-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime Assíncrono, Processos e Sistema de Arquivos
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Chamadas HTTP e Serialização
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

# Interface de Linha de Comando (CLI) e Feedback Visual
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17" # Para a barra de progresso

# Tratamento de Erros
anyhow = "1.0"